# nep

./: Cargo.toml  README.md  rustfmt.toml
src/: app.rs  lib.rs  main.rs
src/app/: app.rs  consts.rs  mod.rs
src/nes/: context.rs  ext.rs  mod.rs  ppu.7z  prelude.rs
src/nes/cartridge/: cartridge.rs  mod.rs
src/nes/cartridge/mappers/: mapper.rs  mapper_000.rs  mod.rs
src/nes/clock/: clock.rs
src/nes/cpu/: addressing.rs  bus.rs  cpu.rs  fetch.rs  instruction.rs  mod.rs  opcode.rs  operand.rs  registers.rs  status_register.rs
src/nes/dma/: dma.rs  mod.rs
src/nes/joypad/: joypad.rs  mod.rs
src/nes/ppu/: color.rs  context.rs  mod.rs  name_table.rs  oam.rs  palette_ram.rs  pattern_table.rs  pixel.rs  ppu.rs  screen.rs
src/nes/ppu/registers/: addrreg.rs  mod.rs  oam.rs  ppuaddr.rs  ppuctrl.rs  ppudata.rs  ppumask.rs  ppuscroll.rs  ppustatus.rs  registers.rs
src/nes/ram/: internal_ram.rs  mod.rs  ram.rs
src/nes/rom/: rom.rs
src/nes/types/: common.rs  errors.rs  macros.rs  memory.rs  mod.rs  result.rs
src/nes/utils/: ext.rs  macros.rs  mod.rs
tests/: cpu.rs
